bug:Fix white space at bottom of page

--- a/public/css/common.scss
+++ b/public/css/common.scss
@@ -432,7 +432,7 @@ body{
 #main-container{
     height: 100%;
     #app-container {
-        height: 100%;
+        height: 80%;
         max-width: 1200px;
         margin: 0px auto;
         position: relative;
