--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1347,7 +1347,6 @@
 
  .navigationDiv {
    background: white;
-   min-height: 30px;
    width: 100%;
  }
 
@@ -1391,6 +1390,11 @@
    margin: 10px;
  }
 
+ .share-button-app img {
+   width: 35px !important;
+   height: 35px !important;
+ }
+
  #crDonateWidget_cfhio_cards4humanity {
    box-shadow: 2px 2px 5px black;
  }
@@ -1431,16 +1435,43 @@
  }
 
  .abandon_game_button {
-   background-color: rgba(168, 39, 16, 1);
+   background-color: #FF9999;
    color: white;
-   margin-left: 440px;
-   margin-top: -80px;
+   font-weight:bold;
+ }
+
+ .abandon_game_button:hover {
+   background-color: #002266 !important;
+   color: white;
+   font-weight:bold;
  }
 
  .header_text {
    font-size: 28px !important;
  }
 
- .socials_block{
+ .socials_block {
    margin-left: 300px;
  }
+
+ .player_top_margin {
+    margin-top:0px;
+ }
+
+ #social-bar-container {
+   top:0 !important;
+ }
+
+ .app-menu li{
+   vertical-align:bottom !important;
+   margin-right:10px !important;
+ }
+
+.app-menu {
+  text-align: center !important;
+}
+
+.app-menu ul{
+text-align: center !important;
+margin:0 auto !important;
+}
